# Client

./: .eslintignore  .eslintrc.cjs  .gitignore  LICENSE  README.md  cypress.config.ts  jsdoc.json  package-lock.json  package.json  tailwind.config.js  test-setup.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: main.tsx  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
client/src/config/: FeatureButtons.ts  FeatureButtons.tsx  auth.ts  getCircleColor.ts
client/src/helpers/: FeatureButtonDecider.ts  JenkinsCalls.ts  notification.ts  utils.ts
cypress/e2e/basic/: jarvis_starts.cy.ts
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app_handle/: format_console_text.rs  jenkins_calls.rs
src-tauri/src/jenkins/: jenkins_client.rs
src/Icons/: pack_1.tsx
src/Interfaces/: IAuthDetails.ts  IBuildInterface.ts  IConfigFile.ts  IFeatureButtonProps.ts  IIconProps.ts  IJenkinsData.ts  IJobCardProps.ts  INotification.ts  IPinnedANDNotificatonJobs.ts  IProjectInterface.ts  IProps_NotificationContext.ts  IReleaseInfo.ts  ITestReport.ts  StylingDict.ts  handleJobCardFeautreButtonInteraction.ts
src/assets/icons/: loading_anim.webm
src/components/ConsoleViewRenderHTML/: ConsoleViewRenderHTML.tsx
src/config/: FeatureButtons.tsx  auth.ts  constants.ts  getCircleColor.ts
src/css/: UpdateAvailable.css
src/helpers/: FeatureButtonDecider.ts  Logger.ts  StorageManager.ts  notification.ts  utils.test.ts  utils.ts
website/: package-lock.json  package.json  tailwind.config.js
website/src/: App.js  App.tsx
website/wwwjarvis/: package-lock.json  package.json  tailwind.config.js
(+165 files in other folders)
