[package]
name = "jarvis"
version = "0.0.0"
description = "Jarvis Jenkins Client"
authors = ["aph"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "process-all", "os-all", "path-all", "fs-all", "notification-all", "shell-all", "dialog-all", "window-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.23"
tokio = { version = "1.33.0", features = ["full"] }
base64 = "0.21.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
