[package]
name = "jarvis"
version = "0.0.0"
description = "JarvisCI - Jenkins Client "
authors = ["aph"]
license = "MIT"
repository = "https://github.com/JarvisClient/Client"
homepage = "https://jarvisci.com"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "process-all", "os-all", "path-all", "fs-all", "notification-all", "shell-all", "dialog-all", "window-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }
base64 = "0.21.7"
window-shadows = "0.2.2"
regex = "1.10.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
